fix: divs in the sidebar div stretching larger than needed
The previous version of the CSS made it so that
when the height of the main-content div increased,
the grid items in the second div of the sidebar
div grew in height as well.

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
     gap: 50px;
     grid-row: 1 / 3;
     background-color: var(--blue-bg-color);
-    grid-template-rows: 45px;
+    grid-template-rows: 50px 300px 150px;
     padding-top: 10px;
     box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.25);
 }
@@ -30,6 +30,7 @@ body {
     font-family: "Roboto";
     display: grid;
     grid-template-columns: 50px 120px;
+    grid-auto-rows: 50px;
     column-gap: 30px;
     font-weight: bold;
     font-size: 20px;
@@ -37,7 +38,6 @@ body {
 }
 
 .sidebar div:first-child {
-    display: grid;
     grid-template-columns: 70px 120px;
     column-gap: 5px;
 }
@@ -66,10 +66,6 @@ body {
 .sidebar div p {
     margin: 0px;
     align-self: center;
-}
-
-.sidebar div:last-child {
-    grid-auto-rows: 50px;
 }
 
 .header {
